# usearch-backend

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 64b3a031e667_add_tags.py  75b234fcb0b2_create_tables.py  83a3f2c97e94_add_id_to_tables.py  928231a4ee59_reformat_university_model.py
app/core/: config.py  utils.py
app/database/: __init__.py  adapter.py  colleague.py  db.py  session.py  university.py  user.py
app/database/models/: base.py  colleague.py  faculty.py  user.py
app/routers/: __init__.py
app/routers/auth/: crud.py  dependencies.py  models.py
app/routers/auth/api/: v1.py
app/routers/university/: models.py
app/routers/university/api/: v1.py
app/routers/user/: models.py
app/routers/user/api/: v1.py
